[package]
name = "solana_monitor"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-client = "1.18.26"
solana-sdk = "1.18.26"
solana-transaction-status = "1.18.26"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
serde_json = "1.0"